--- a/estilos.css
+++ b/estilos.css
@@ -10,7 +10,7 @@ h1 {
     background-color: #1b3057;
     color: white; 
     padding: 15px 0; 
-    margin: 0; /
+    margin: 0;
     box-shadow: 1 4px 8px rgba(0, 1, 1, 1); 
     position: fixed;
 }
